--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -39,3 +39,24 @@ header h1 {
     background: orange;
     padding: 0.25em;
 }
+
+button {
+    background: transparent;
+    border-radius: 8px;
+    border: 2px solid #2c3e50;
+    color: #2c3e50;
+    cursor: pointer;
+    font-size: 24px;
+    padding: 10px;
+    outline: none;
+    margin: 20px;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: #2c3e5050;
+}
+
+button:active {
+    background: #f0f0ff;
+}
