--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,13 +1,13 @@
 #helpBtn {
-    background: url(./help.svg);
+    background: url(../assets/help.svg);
 }
 
 #settingsBtn {
-    background: url(./settings.svg);
+    background: url(../assets/settings.svg);
 }
 
 #statsBtn {
-    background: url(./stats.svg);
+    background: url(../assets/stats.svg);
 }
 
 #helpBtn, #settingsBtn, #statsBtn {
